<resources>
    <string name="app_name">OnlineShopping</string>
    <string name="menu_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_clothes">Clothes</string>
    <string name="menu_shoes">Shoes</string>
    <string name="menu_mobiles">Mobiles</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">HomeFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="clothes_fragment">ClothesFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="shoes_fragment">ShoesFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="mobiles_fragment">MobilesFragment</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="profile_fragment">ProfileFragment</string>
    <string name="menu_add_product">Add Product</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="selected_item">Selected item:</string>

    <string-array name="Categories">
        <item>Clothes</item>
        <item>Shoes</item>
        <item>Mobiles</item>
    </string-array>


</resources>
