<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_clothes"
            android:title="@string/menu_clothes"

            />
        <item
            android:id="@+id/nav_shoes"
            android:title="@string/menu_shoes" />
        <item
            android:id="@+id/nav_mobiles"
            android:title="@string/menu_mobiles"
            ></item>

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_add_product"
                android:title="@string/menu_add_product" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>